[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Camera/CameraHighlightTool.gd" type="Script" id=1]
[ext_resource path="res://src/Camera/CameraAnchor.gd" type="Script" id=2]

[node name="CameraAnchor" type="Position2D"]
script = ExtResource( 2 )
screen_size = Vector2( 480, 270 )

[node name="BoundsNW" type="Position2D" parent="."]
position = Vector2( -240, -135 )

[node name="BoundsSE" type="Position2D" parent="."]
position = Vector2( 240, 135 )

[node name="CameraHightLightTool" type="Node2D" parent="."]
script = ExtResource( 1 )
